syntax = "proto3";
package msg;
option go_package = "verse/backend/pb";

// Redis/mongoDB CRUD operations API Input/Output messages
// 假设数据都是kv的, value 可序列化为bytes

message SetRequest  {
  string        key               = 1;
  bytes         data              = 2; // 这个字段不能改名字
  int64         updateMs          = 3; // 暂时只有Mongo支持
  SetRequestExt ext               = 4;
  uint32        structuralVersion = 5;
}

message SetRequestExt {
  map<string, int64> mongoIndexes = 1; // Model生成
}

message SetOption {
  int64 redisTTL  = 1; // KV模块设置
  bool  permanent = 2; // 持久保存
  int64 updateMs  = 3; // 更新时间
}

message GetRequest  {
  string key = 1;
}

message GetResponse {
  bytes  data              = 1; // 这个字段不能改名字
  uint32 structuralVersion = 2;
}

message MGetRequest {
  repeated string keys = 1;
}

message  MGetResponse {
  repeated MGetEntry entries = 1;
}

message MGetEntry {
  string key               = 1;
  bytes  data              = 2;
  bool   isNil             = 3; // Error string如果需要再加
  uint32 structuralVersion = 4;
}

message DelRequest  {
  string key = 1;
}

message MDelRequest {
  repeated string keys = 1;
}

message QueryRequest {
  repeated QueryFilter filters     = 1;
  bool                 keysOnly    = 2; // 仅查询key
  bool                 IndexesOnly = 3; // 仅查询indexes
}

message QueryFilter {
  string         propertyName   = 1;
  FilterOperator operator       = 2;
  int64          propertyValue  = 3;
  repeated int64 propertyValues = 4;
  string         propertyStrVal = 5; // 仅支持string类型
}

enum FilterOperator {
  InRange        = 0;
  Equal          = 1;
  Less           = 2;
  Greater        = 3;
  LessOrEqual    = 4;
  GreaterOrEqual = 5;
  NotEqual       = 6;
}

message QueryResponse {
  repeated QueryEntry entries = 1;
}

message QueryEntry {
  string             key               = 1;
  bytes              data              = 2;
  map<string, int64> indexes           = 3;
  uint32             structuralVersion = 4;
}
