syntax = "proto3";

package chatee.msg.thread;

option go_package = "chatee-go/proto/msg/thread";

import "common/common.proto";

// =============================================================================
// Thread Service - Topic-based Discussion System
// =============================================================================

service ThreadService {
    // Thread Management
    rpc CreateThread(CreateThreadRequest) returns (CreateThreadResponse);
    rpc GetThread(GetThreadRequest) returns (Thread);
    rpc UpdateThread(UpdateThreadRequest) returns (Thread);
    rpc DeleteThread(DeleteThreadRequest) returns (DeleteThreadResponse);
    rpc ListThreads(ListThreadsRequest) returns (ListThreadsResponse);
    
    // Message Operations
    rpc Publish(PublishRequest) returns (PublishResponse);
    rpc Reply(ReplyRequest) returns (ReplyResponse);
    rpc GetMessages(GetMessagesRequest) returns (GetMessagesResponse);
    rpc DeleteMessage(DeleteMessageRequest) returns (DeleteMessageResponse);
    
    // Subscription
    rpc Subscribe(SubscribeRequest) returns (stream ThreadEvent);
    
    // Feed
    rpc GetUserFeed(GetUserFeedRequest) returns (GetUserFeedResponse);
    rpc GetReplyInbox(GetReplyInboxRequest) returns (GetReplyInboxResponse);
    rpc MarkAsRead(MarkAsReadRequest) returns (MarkAsReadResponse);
}

// =============================================================================
// Thread Data Model
// =============================================================================

message Thread {
    string thread_id = 1;
    string owner_id = 2;
    string root_msg_id = 3;
    string title = 4;
    ThreadStatus status = 5;
    ThreadSettings settings = 6;
    ThreadStats stats = 7;
    repeated string ai_agents = 8;    // AI agents in this thread
    int64 created_at = 9;
    int64 updated_at = 10;
}

message ThreadSettings {
    bool allow_replies = 1;
    int32 max_depth = 2;
    bool require_follow = 3;          // Require following owner to reply
    repeated string allowed_users = 4; // Whitelist (if empty, all followers can reply)
}

message ThreadStats {
    int64 reply_count = 1;
    int64 participant_count = 2;
    string last_msg_id = 3;
    int64 last_active_at = 4;
    double hot_score = 5;
}

enum ThreadStatus {
    THREAD_STATUS_UNSPECIFIED = 0;
    THREAD_ACTIVE = 1;
    THREAD_CLOSED = 2;
    THREAD_ARCHIVED = 3;
}

// =============================================================================
// Thread CRUD
// =============================================================================

message CreateThreadRequest {
    string owner_id = 1;
    chatee.common.BaseMessage root_message = 2;
    string title = 3;
    ThreadSettings settings = 4;
    repeated string ai_agents = 5;
}

message CreateThreadResponse {
    string thread_id = 1;
    string msg_id = 2;
    int64 timestamp = 3;
}

message GetThreadRequest {
    string thread_id = 1;
}

message UpdateThreadRequest {
    string thread_id = 1;
    string title = 2;
    ThreadSettings settings = 3;
    ThreadStatus status = 4;
    repeated string ai_agents = 5;
}

message DeleteThreadRequest {
    string thread_id = 1;
    string requester_id = 2;
}

message DeleteThreadResponse {
    bool success = 1;
}

message ListThreadsRequest {
    string owner_id = 1;
    ThreadStatus status = 2;
    int32 limit = 3;
    string cursor = 4;
}

message ListThreadsResponse {
    repeated Thread threads = 1;
    string next_cursor = 2;
    bool has_more = 3;
}

// =============================================================================
// Publishing and Replying
// =============================================================================

message PublishRequest {
    string owner_id = 1;
    chatee.common.BaseMessage message = 2;
    string title = 3;
    ThreadSettings settings = 4;
    repeated string ai_agents = 5;
}

message PublishResponse {
    string thread_id = 1;
    string msg_id = 2;
    int64 timestamp = 3;
    FanoutResult fanout = 4;
}

message ReplyRequest {
    string replier_id = 1;
    string thread_id = 2;
    string parent_msg_id = 3;
    chatee.common.BaseMessage message = 4;
}

message ReplyResponse {
    string msg_id = 1;
    int64 timestamp = 2;
    repeated string full_targets = 3;     // Full push targets
    repeated string limited_targets = 4;  // Limited push targets
    FanoutResult fanout = 5;
}

message FanoutResult {
    int32 total_recipients = 1;
    int32 online_pushed = 2;
    int32 offline_stored = 3;
    int32 ai_notified = 4;
}

// =============================================================================
// Message Retrieval
// =============================================================================

message GetMessagesRequest {
    string thread_id = 1;
    string parent_msg_id = 2;     // Empty for root level
    int32 limit = 3;
    string cursor = 4;
    bool newest_first = 5;
}

message GetMessagesResponse {
    repeated ThreadMessage messages = 1;
    string next_cursor = 2;
    bool has_more = 3;
}

message ThreadMessage {
    chatee.common.BaseMessage base = 1;
    string thread_id = 2;
    string parent_msg_id = 3;
    int32 depth = 4;
    int32 reply_count = 5;
    bool is_root = 6;
    bool deleted = 7;
}

message DeleteMessageRequest {
    string msg_id = 1;
    string requester_id = 2;
}

message DeleteMessageResponse {
    bool success = 1;
}

// =============================================================================
// Subscription
// =============================================================================

message SubscribeRequest {
    string thread_id = 1;
    string user_id = 2;
}

message ThreadEvent {
    string event_type = 1;        // new_reply, mention, updated, deleted
    string thread_id = 2;
    string msg_id = 3;
    bytes payload = 4;
    int64 timestamp = 5;
}

// =============================================================================
// Feed and Inbox
// =============================================================================

message GetUserFeedRequest {
    string user_id = 1;
    int32 limit = 2;
    string cursor = 3;
    bool unread_only = 4;
}

message GetUserFeedResponse {
    repeated FeedItem items = 1;
    string next_cursor = 2;
    bool has_more = 3;
    int32 unread_count = 4;
}

message FeedItem {
    string thread_id = 1;
    string msg_id = 2;
    string msg_type = 3;          // root, reply
    string author_id = 4;
    chatee.common.AuthorType author_type = 5;
    string content_preview = 6;
    FeedFlags flags = 7;
    int64 timestamp = 8;
    bool read = 9;
}

message FeedFlags {
    bool is_root = 1;
    bool has_mention = 2;
    bool is_ai = 3;
    bool requires_follow = 4;
}

message GetReplyInboxRequest {
    string user_id = 1;
    int32 limit = 2;
    string cursor = 3;
    bool unread_only = 4;
}

message GetReplyInboxResponse {
    repeated ReplyItem items = 1;
    string next_cursor = 2;
    bool has_more = 3;
    int32 unread_count = 4;
}

message ReplyItem {
    string thread_id = 1;
    string reply_msg_id = 2;
    string reply_author_id = 3;
    string parent_msg_id = 4;
    string push_type = 5;         // full, limited, mention
    string content_preview = 6;
    bytes full_content = 7;       // Only for push_type=full
    string reason = 8;            // owner, mentioned, ai_mentioned
    bool require_follow = 9;
    string thread_owner = 10;
    int64 timestamp = 11;
    bool read = 12;
}

message MarkAsReadRequest {
    string user_id = 1;
    repeated string msg_ids = 2;
    string thread_id = 3;         // Mark all in thread as read
}

message MarkAsReadResponse {
    int32 marked_count = 1;
}
